# et-rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper_ops.h  wrapper_trace.h
emu-shim/: CMakeLists.txt  et_emu_shim.cpp  et_emu_shim.h
examples/: hello.rs  hello_sysemu.rs
kernel-rs/: Cargo.toml  README.md  link.ld
kernel-rs/.cargo/: config.toml
kernel-rs/src/: main.rs
src/: bindings_ops.rs  bindings_trace.rs  device.rs  elf.rs  error.rs  ffi.rs  ioctl.rs  lib.rs  proto.rs  trace.rs
src/transport/: ffi_transport.rs  ioctl_transport.rs  mod.rs
tests/: device_mock.rs  elf_real.rs  trace_decode.rs
