[package]
name = "et-rs"
version = "0.1.0"
authors = ["R Neale mathsDOTearth"]
edition = "2024"
description = "Host-side Rust interface to the Esperanto ET-SoC-1 RISC-V accelerator"
license = "Apache-2.0"
repository = "https://github.com/mathsDOTearth/et-rs"
documentation = "https://docs.rs/et-rs"
readme = "README.md"
keywords = ["esperanto", "et-soc-1", "riscv", "accelerator", "driver"]
categories = ["hardware-support", "external-ffi-bindings", "no-std"]
rust-version = "1.85"

# `include` is an allowlist: only these files are packaged for crates.io, so
# build artifacts and the separately-packaged `kernel-rs` are left out
# automatically.
include = [
    "src/**/*.rs", "/build.rs", "/wrapper_ops.h", "/wrapper_trace.h",
    "emu-shim/et_emu_shim.cpp", "emu-shim/et_emu_shim.h", "emu-shim/CMakeLists.txt",
    "examples/*.rs", "/README.md", "/LICENSE",
]

# The public crate name is `et_soc1`, matching the C/C++ nomenclature, while the
# package on disk remains `et-rs`.
[lib]
name = "et_soc1"
path = "src/lib.rs"

[features]
# Build the FFI software-emulator backend (`FfiTransport`). Requires the SDK C++
# device-layer and a CMake toolchain; the default build stays pure-Rust ioctl.
emu = []

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.72"

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "hello_sysemu"
path = "examples/hello_sysemu.rs"
required-features = ["emu"]
